# netball-model

./: .gitignore  README.md  app.py  eventid_html.txt  pyproject.toml
components/paste_image/: index.html
data/odds/: 2026-03-14.json
docs/: champion_data_api_reference.md
docs/plans/: 2026-02-26-netball-betting-model-design.md  2026-02-26-netball-betting-model-implementation.md  2026-03-05-eda-and-model-training-design.md  2026-03-05-eda-and-model-training-implementation.md  2026-03-09-player-matchups-design.md  2026-03-09-player-matchups-implementation.md
docs/superpowers/plans/: 2026-03-11-value-finder-app.md  2026-03-13-bet365-scraper-fix.md  2026-03-13-model-enhancement.md  (+2 more)
notebooks/: eda.ipynb  eda_odds.ipynb  eda_player_matchups.ipynb  model_evaluation.ipynb  player_stats.ipynb
scripts/: backfill_player_names.py  fetch_odds.py  ssn_events.py  test_betsapi.py
src/netball_model/: __init__.py  cli.py  display.py  match_utils.py  services.py
tests/: conftest.py  test_cli.py  test_fetch_odds.py  test_ingest.py  test_integration.py  test_match_utils.py  test_odds.py  test_odds_storage.py  test_services.py
tests/data/: test_bet365.py  test_bet365_screenshot.py  test_betfair.py  test_betsapi.py  test_champion_data.py  test_database.py  test_odds_for_match.py  test_player_movements.py  test_squads.py  test_team_names.py
tests/features/: test_builder.py  test_contextual.py  test_elo.py  test_matchups.py  test_player_elo.py  test_player_profile.py  test_player_rankings.py
tests/model/: test_time_weighting.py  test_train.py
tests/value/: test_detector.py
(+25 files in other folders)
