[tool.poetry]
name = "netball-model"
version = "0.1.0"
description = "Netball betting model — Glicko-2 ratings + Ridge regression"
authors = []
packages = [{include = "netball_model", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27"
pandas = "^2.2"
scikit-learn = "^1.4"
glicko2 = "^2.0"
click = "^8.1"
rich = "^13.7"
scipy = "^1.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
respx = "^0.21"

[tool.poetry.scripts]
netball = "netball_model.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
